# WinSpeak

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  README.md  ROADMAP.md  build.bat  llms.txt
docs/: WinSpeak.md  mkdocs.yml  set_mute.md
docs/docs/: FAQ.md  announcements.md  index.md  installation.md
docs/docs/about/: CHANGELOG.md  ROADMAP.md  team.md
docs/docs/features/: features.md  get_volume.md  is_muted.md  set_mute.md  set_volume.md
docs/site/: 404.html  FAQ.html  announcements.html  index.html  installation.html  search.html
docs/site/about/: CHANGELOG.html  CODE_OF_CONDUCT.html  ROADMAP.html  SECURITY.html  contributing.html  license.html  team.html
docs/site/features/: features.html  get_volume.html  is_muted.html  set_mute.html  set_volume.html
docs/site/search/: search_index.json
include/WinSpeak/: AudioDeviceManager.hpp  IAudioDeviceEnumerator.hpp  IAudioProvider.hpp  IMuteControl.hpp  IVolumeControl.hpp  WinSpeak.hpp
src/: AudioDeviceManager.cpp  WinSpeak.cpp
tests/: CMakeLists.txt  test_WinSpeak.cpp
